--- a/week1-day1/html-demo1.html
+++ b/week1-day1/html-demo1.html
@@ -22,6 +22,7 @@
             <main>
                 <h1>My First Heading</h1>
                 <p>My first paragraph.</p>
+                <img src="images/central_park.jpg" alt="Central Park" width="500">
             </main> <!-- End Main Content -->
 
             <!-- Footer Information -->
