--- a/m1-assignment/login.html
+++ b/m1-assignment/login.html
@@ -8,7 +8,7 @@
         <!-- Container to wrap everything-->
         <div id="container">
             <!-- Main Navigation -->
-            <div id="signup-section">
+            <div id="top-section">
                 <nav>
                     <ul id="menu">
                         <li>
@@ -23,8 +23,19 @@
                     </ul>
                 </nav> <!-- End Main Navigation-->
                 <header>Nextdoor</header>
+
+                <div id="signup">
+                    <h1>Tap into your neighborhood</h1>
+                    <div id="address">
+                        <p>Enter your address to sign up</p>
+                        <input type="text" placeholder="Street address">
+                        <input type="text" placeholder="Apt">
+                        <input type="email" placeholder="Email">
+                        <button type="submit">Join your neighborhood</button>
+                    </div>
+                </div>
+                
             </div>
-            
 
             <!-- Main Content -->
             <main>
@@ -32,7 +43,6 @@
                 <div id="address">
                     <form action="/signup" method="POST">
                         <fieldset>
-                            <legend>Welcome back</legend>
                             <label>Email or phone number</label><br>
                             <input type="text" name="name"><br>
                             <label>Password</label><br>
