--- a/m1-assignment/index.html
+++ b/m1-assignment/index.html
@@ -55,6 +55,30 @@
                     <img src="images/sell.jpg" width="200px">
                     <p>Buy and sell</p>
                 </span>
+
+                <hr>
+                <table border="1">
+                    <caption>Statistics of our website</caption>
+                    <thead>
+                        <tr>
+                            <th>Daily active users</th>
+                            <th>Registered users</th>
+                            <th>Users checking news</th>
+                            <th>Users who finds neighbors via our website</th>
+                            <th>Users who are selling used products</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>5324</td>
+                            <td>63123</td>
+                            <td>3100</td>
+                            <td>2334</td>
+                            <td>1923</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <hr>
             </main> <!-- End Main Content -->
 
             <!-- Footer Information -->
