added a third page

--- a/m1-assignment/index.html
+++ b/m1-assignment/index.html
@@ -16,7 +16,9 @@
                         </li>
                         <li>Agencies</li>
                         <li>Business</li>
-                        <li>Nonprofits</li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
                         <li>
                             <a href="login.html">Log in</a>
                         </li>
