--- a/m1-assignment/contact.html
+++ b/m1-assignment/contact.html
@@ -26,22 +26,31 @@
                 </nav> <!-- End Main Navigation-->
                 <header>Nextdoor</header>
 
-                <div id="address">
-                    <form action="/signup" method="POST">
+                <div id="contact">
+                    <form action="/contact" method="POST">
                         <fieldset>
-                            <label>Email or phone number</label><br>
+                            <legend>Contact us</legend>
+                            <label>Enter your full name</label><br>
                             <input type="text" name="name"><br>
-                            <label>Password</label><br>
+                            <label>Enter your email</label><br>
                             <input type="text" name="email"><br>
-                            <p style="color: blue;">Forget Password?</p>
-                            <button style="background-color: green;" type="submit">Log in</button>
-                            <p>OR</p>
-                            <button>Login with Google</button>
-                            <button>Login with Facebook</button>
-                            <button>Login with Apple</button>
+                            <label>Enter your phone</label><br>
+                            <input type="text" name="phone"><br>
+                            <br><label>Select your gender</label><br>
+                            <input type="radio" name="gender" value="male"/>Male
+                            <input type="radio" name="gender" value="female"/>Female<br/>
+                            <br><label>How should we contact you?</label><br>
+                            <select>
+                                <option>Email</option>
+                                <option>Phone</option>
+                            </select>
+                            <br>Tell us the reason of your visit today:<br>
+                            <textarea rows="5" cols="30"></textarea><br>
+                            <input type="submit" value="contact us">
                         </fieldset>
                     </form>
                 </div>
+                
             </div>
 
             <!-- Main Content -->
