updated the third page

--- a/m1-assignment/contact.html
+++ b/m1-assignment/contact.html
@@ -29,22 +29,12 @@
                 <div id="contact">
                     <form action="/contact" method="POST">
                         <fieldset>
-                            <legend>Contact us</legend>
-                            <label>Enter your full name</label><br>
+                            <legend>Fill Up The Form to Contact Us:</legend>
+                            <label>YOUR NAME</label><br>
                             <input type="text" name="name"><br>
-                            <label>Enter your email</label><br>
+                            <label>YOUR EMAIL</label><br>
                             <input type="text" name="email"><br>
-                            <label>Enter your phone</label><br>
-                            <input type="text" name="phone"><br>
-                            <br><label>Select your gender</label><br>
-                            <input type="radio" name="gender" value="male"/>Male
-                            <input type="radio" name="gender" value="female"/>Female<br/>
-                            <br><label>How should we contact you?</label><br>
-                            <select>
-                                <option>Email</option>
-                                <option>Phone</option>
-                            </select>
-                            <br>Tell us the reason of your visit today:<br>
+                            <br>YOUR MESSAGE (OPTIONAL)<br>
                             <textarea rows="5" cols="30"></textarea><br>
                             <input type="submit" value="contact us">
                         </fieldset>
