--- a/homework-module1/activities.html
+++ b/homework-module1/activities.html
@@ -14,10 +14,16 @@
                     </div>
                     <nav class="main-menu">
                         <ul>
-                            <li>Home</li>
+                            <li>
+                                <a href="index.html">Home</a>
+                            </li>
                             <li>Cliffs</li>
-                            <li>Events</li>
-                            <li>Contact</li>
+                            <li>
+                                <a href="activities.html">Activities</a>
+                            </li>
+                            <li>
+                                <a href="contact.html">Contact</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
