--- a/homework-module1/contact.html
+++ b/homework-module1/contact.html
@@ -16,7 +16,7 @@
                         <ul>
                             <li>Home</li>
                             <li>Cliffs</li>
-                            <li>Events</li>
+                            <li>Activities</li>
                             <li>Contact</li>
                         </ul>
                     </nav>
