--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                         <button type="submit">Join your neighborhood</button>
                     </div>
                 </div>
-                
             </div>
 
             <!-- Main Content -->
@@ -44,17 +43,17 @@
                 <h2>Get the help from your neighbors</h2>
                 <p>You can get help from here. For example, you can borrow some tools from your neighbors.</p>
                 <span>
-                    <img src="images/news.jpg" width="200px">
+                    <img src="images/news.jpg" width="300px">
                     <p>Local news</p>
                 </span>
 
                 <span>
-                    <img src="images/connect.webp" width="200px">
+                    <img src="images/connect.jpg" width="300px" height="170px">
                     <p>Find neighbors</p>
                 </span>
                 
                 <span>
-                    <img src="images/sell.jpg" width="200px">
+                    <img src="images/sell.jpg" width="300px">
                     <p>Buy and sell</p>
                 </span>
 
@@ -80,7 +79,6 @@
                         </tr>
                     </tbody>
                 </table>
-                <hr>
             </main> <!-- End Main Content -->
 
             <!-- Footer Information -->
