--- a/login.html
+++ b/login.html
@@ -24,17 +24,17 @@
                         </li>
                     </ul>
                 </nav> <!-- End Main Navigation-->
-                <header>Nextdoor</header>
+                <header>Neighbors</header>
 
-                <div id="address">
-                    <form action="/signup" method="POST">
+                <div id="login">
+                    <form action="/login" method="POST">
                         <fieldset>
                             <label>Email or phone number</label><br>
                             <input type="text" name="name"><br>
                             <label>Password</label><br>
                             <input type="text" name="email"><br>
-                            <p style="color: blue;">Forget Password?</p>
-                            <button style="background-color: green;" type="submit">Log in</button>
+                            <p style="text-decoration: underline;">Forget Password?</p>
+                            <button type="submit">Log in</button>
                             <p>OR</p>
                             <button>Login with Google</button>
                             <button>Login with Facebook</button>
