--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                         <li>
                             <a href="index.html">Neighbors</a>
                         </li>
-                        <li>Agencies</li>
+                        <li>
+                            <a href="sceneries.html">Local Sceneries</a>
+                        </li>
                         <li>Business</li>
                         <li>
                             <a href="contact.html">Contact</a>
