--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
             <!-- Main Content -->
             <main>
-                <h2>Get the help from your neighbors</h2>
-                <p>You can get help from here. For example, you can borrow some tools from your neighbors.</p>
+                <h2 id="help-title">Get the help from your neighbors</h2>
+                <p class="large-font">You can get help from here. For example, you can borrow some tools from your neighbors.</p>
                 <span>
                     <img src="images/news.jpg" width="300px">
                     <p>Local news</p>
