--- a/sceneries.html
+++ b/sceneries.html
@@ -3,6 +3,7 @@
     <head>
         <title>Neighbors</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <!-- Container to wrap everything-->
@@ -37,6 +38,11 @@
                         <h2 id="info-box-title">Snow Land</h2>
                         <p id="info-box-desc">Most of plants and animals are </p>
                         <a id="info-box-close">Close This To Close</a>
+                    </div>
+                    <!-- lightbox -->
+                    <div class="backdrop"></div>
+                    <div class="box">
+                        <div class="close">x</div>
                     </div>
                 </div>
             </main> <!-- End Main Content -->
